# graphicsStudy

./: CMakeLists.txt  build.sh  generics.h.in  main.c
include/: generics.h
src/: main.c
